# annual-deprivation-index

./: .gitignore  CLAUDE.md  METHODOLOGY.md  README.md  nblite.toml  pyproject.toml
config/: netrun.json  qof_schemas.toml  run_defs.toml
design/system/: README.md
design/system/_proofs/: render_proofs.py
design/system/charts/: chart-language.css  chart-language.html
design/system/favicon/: favicon_gen.py
design/system/icons/: icons-preview.html  icons_gen.py
design/system/keyvisual/: README.md  keyvisual_gen.py
design/system/logo/: mark_gen.py
dev/agent-context/: NETRUN_INSTRUCTIONS.md  NETRUN_INSTRUCTIONS_CONCISE.md
dev/recipes/: add_func_node.py
dev/templates/: func_node.pct.py.jinja
nbs/analysis/: absolute_vs_relative.ipynb  adi_vs_imd_correlation.ipynb  optimal_adi_weighting.ipynb
nbs/validation/: aggregation_consistency.ipynb  crosswalk_conservation.ipynb  data_completeness.ipynb  health_estimation_quality.ipynb  temporal_consistency.ipynb
pts/analysis/: absolute_vs_relative.pct.py  adi_vs_imd_correlation.pct.py  optimal_adi_weighting.pct.py
pts/validation/: aggregation_consistency.pct.py  crosswalk_conservation.pct.py  data_completeness.pct.py  health_estimation_quality.pct.py  temporal_consistency.pct.py
scripts/: deploy.sh  run_pipeline.sh  validate_outputs.py
site/: package-lock.json  package.json  svelte.config.js  vite.config.js
site/scripts/: build_data.py  build_geo.sh  build_web.sh
site/src/: app.css  app.html
src/adi/: const.py  run_pipeline.py
src/dev_utils/: __init__.py  utils.py
tests/: test_validate_outputs.py
(+49 files in other folders)
