[project]
name = "annual-deprivation-index-v2"
version = "0.1.0"
description = "Annual Deprivation Index for England — productionised pipeline"
requires-python = ">=3.12"
dependencies = [
    "netrun>=0.5.0",
    "python-dotenv>=1.0",
    "pandas>=2.0",
    "geopandas>=1.1.3",
    "shapely>=2.0",
    "numpy>=1.26",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "openpyxl>=3.1",
    "xlrd>=2.0",
    "nest-asyncio>=1.6",
    "pyarrow>=10.0",
    "scipy>=1.12",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.5",
    "nblite>=1.1.12",
    "netrun-ui>=0.3.0",
    "netrun[cli]>=0.5.0",
    "pytest>=9.0",
    "pytest-asyncio>=1.3",
]

[project.scripts]
run-pipeline = "adi.run_pipeline:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
ignore-vcs = true
sources = ["src"]
packages = ["src/adi", "src/dev_utils"]

[tool.pytest.ini_options]
testpaths = ["src/tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
pythonpath = ["src"]
